# msgfleet-users-service

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 084d0c007f72_.py  0f6b9f8ccade_.py  6c201203318b_.py  d732058df32c_.py
scripts/: dev.py
src/users_service/: loader.py  main.py
src/users_service/api/: router.py
src/users_service/api/dto/: __init__.py  parameters.py  responses.py
src/users_service/config/: settings.py
src/users_service/domain/models/: enums.py  models.py
src/users_service/infrastructure/: logging.py
src/users_service/infrastructure/db/: models.py  setup.py
src/users_service/services/dependencies/: db.py
src/users_service/services/flows/: __init__.py  _flows.py
src/users_service/services/flows/dto/: parameters.py  responses.py
src/users_service/services/queries/: __init__.py
src/users_service/services/queries/dto/: __init__.py
src/users_service/services/queries/dto/parameters/: __init__.py  users.py  users_profile.py
src/users_service/services/queries/dto/responses/: __init__.py  users.py  users_profile.py
src/users_service/services/queries/queries/: users.py  users_auth.py  users_profile.py
src/users_service/utils/: misc.py  session.py
src/users_service/utils/dto/: __init__.py  _dto.py  schemas.py
