[project]
name = "users-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazliddin Abdurahimov",email = "fazliddin1801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "users_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts.dev:main"
